[package]
name = "tw-api"
version = "0.1.27"
edition = "2021"
license = "MIT"
description = "Twitch API implementation."
documentation = "https://docs.rs/tw-api"
readme = "README.md"
repository = "https://gitlab.com/haeppi/tw-api"
keywords = ["twitch", "api", "helix"]
authors = [
    "Haeppi <me@haeppi.dev>",
    "Sebastian Speitel <sebastian.speitel@outlook.de>",
]

[dependencies]
async-trait = "0.1"
anyhow = "1"
futures = { version = "0" }
futures-util = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
irc = { version = "1.0", optional = true }
bevy_ecs = { version = "0.14", optional = true }
log = "0.4"

[features]
default = ["chat"]
chat = ["dep:irc"]
bevy = ["dep:bevy_ecs"]
